--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <h1></h1>
         <p> My name is Wesley Luu and this is my first website.
             I am a first year-physics major hoping to do computational physics in the future.
-            My hobbies invloves, game development, aqua scaping and I love to platying games. 
+            My hobbies invloves, game development, aqua scaping and playing video-games. 
         </p>
     </body>
 </html>
