--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
             I am a first year-physics major hoping to do computational physics in the future.
             My hobbies invloves, game development, aqua scaping and playing video-games. 
         </p>
+        <img src="resume.jpg" height="500">
     </body>
 </html>
